--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,9 @@ header {
   -webkit-transition: all .2s ease-out;
   box-shadow: 0rem 0rem 1vh rgba(0, 0, 0, 0.2);
   border-bottom: 0.5px solid rgba(117, 117, 117, 0.2); }
+  header.less-pad {
+    padding-top: .2rem;
+    padding-bottom: .2rem; }
   header:hover {
     background-color: white; }
     header:hover nav #nav-list a {
@@ -72,6 +75,112 @@ header {
     header #idioma-mobile svg {
       width: .8rem;
       display: inline-block; }
+  header.mobile {
+    background-color: white;
+    padding: .5rem .7rem;
+    z-index: 454688888888; }
+    header.mobile:hover nav #nav-list .nav-li:nth-of-type(8) a {
+      color: #fcfcfc;
+      border: none; }
+    header.mobile:hover nav #nav-list .nav-li#redblue-li {
+      background: transparent;
+      padding: 0;
+      border-radius: 0; }
+      header.mobile:hover nav #nav-list .nav-li#redblue-li a {
+        color: #fcfcfc; }
+    header.mobile #idioma-mobile {
+      display: flex;
+      right: calc(14vw + 0.8rem); }
+    header.mobile nav {
+      left: 0;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between; }
+      header.mobile nav #logo-mobile {
+        display: flex; }
+      header.mobile nav #nav-toggle {
+        z-index: 4788888888888;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end; }
+      header.mobile nav #nav-list {
+        padding: 1rem 1rem 2.5rem 1rem;
+        display: block;
+        position: absolute;
+        top: calc(100% + .5rem);
+        right: -.8rem;
+        width: 60vw;
+        background-color: #090B41;
+        border-left: 0.5px solid rgba(117, 117, 117, 0.2);
+        height: 100vh;
+        -webkit-transform: translateX(100vw);
+        -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03);
+        overflow-y: scroll; }
+        header.mobile nav #nav-list .nav-li {
+          display: block;
+          margin: 0;
+          margin-bottom: 1rem; }
+          header.mobile nav #nav-list .nav-li#redblue-li {
+            background: transparent;
+            padding: 0;
+            border-radius: 0; }
+            header.mobile nav #nav-list .nav-li#redblue-li a {
+              color: #fcfcfc; }
+          header.mobile nav #nav-list .nav-li:nth-of-type(8) a {
+            color: #fcfcfc;
+            font-weight: 500;
+            border: none;
+            padding: 0; }
+          header.mobile nav #nav-list .nav-li:nth-of-type(8) a:hover {
+            -webkit-animation: none; }
+          header.mobile nav #nav-list .nav-li .underline {
+            display: none; }
+          header.mobile nav #nav-list .nav-li#logo-li {
+            display: none; }
+          header.mobile nav #nav-list .nav-li a {
+            color: #fcfcfc;
+            font-size: .5rem; }
+            header.mobile nav #nav-list .nav-li a p {
+              display: inline-block; }
+            header.mobile nav #nav-list .nav-li a .show-options {
+              display: inline-block;
+              position: absolute;
+              right: 0; }
+          header.mobile nav #nav-list .nav-li:last-of-type {
+            margin-bottom: 2rem; }
+          header.mobile nav #nav-list .nav-li svg polyline {
+            stroke: #fff;
+            fill: none;
+            stroke-width: 3; }
+        header.mobile nav #nav-list #under-servicios, header.mobile nav #nav-list #under-standards, header.mobile nav #nav-list #under-industrias {
+          display: none;
+          opacity: 1;
+          pointer-events: visible;
+          background-color: transparent;
+          position: relative;
+          top: 0;
+          left: 0;
+          width: auto;
+          padding: 0;
+          box-shadow: none; }
+          header.mobile nav #nav-list #under-servicios#under-standards, header.mobile nav #nav-list #under-standards#under-standards, header.mobile nav #nav-list #under-industrias#under-standards {
+            left: 0;
+            width: auto; }
+          header.mobile nav #nav-list #under-servicios li, header.mobile nav #nav-list #under-standards li, header.mobile nav #nav-list #under-industrias li {
+            -webkit-transform: translateX(0);
+            opacity: 1;
+            margin-left: 0;
+            margin-bottom: .5rem; }
+            header.mobile nav #nav-list #under-servicios li:last-of-type, header.mobile nav #nav-list #under-standards li:last-of-type, header.mobile nav #nav-list #under-industrias li:last-of-type {
+              margin-bottom: .1rem; }
+            header.mobile nav #nav-list #under-servicios li a, header.mobile nav #nav-list #under-standards li a, header.mobile nav #nav-list #under-industrias li a {
+              text-transform: none;
+              font-weight: 300; }
+        header.mobile nav #nav-list #idioma-li {
+          display: none; }
+        header.mobile nav #nav-list #logo {
+          display: none; }
 
 nav h1 {
   position: absolute;
@@ -1244,115 +1353,168 @@ footer {
       font-weight: 600;
       margin-bottom: .4rem; }
 
-@media screen and (max-width: 1024px) {
-  html {
-    font-size: 7vw; }
-  header {
-    background-color: white;
-    padding: .5rem .7rem;
-    z-index: 454688888888; }
-    header:hover nav #nav-list .nav-li:nth-of-type(8) a {
-      color: #fcfcfc;
-      border: none; }
-    header:hover nav #nav-list .nav-li#redblue-li {
-      background: transparent;
-      padding: 0;
-      border-radius: 0; }
-      header:hover nav #nav-list .nav-li#redblue-li a {
-        color: #fcfcfc; }
-    header #idioma-mobile {
-      display: flex;
-      right: calc(14vw + 0.8rem); }
-    header nav {
-      left: 0;
+#banner-noc {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(104deg, rgba(9, 11, 65, 0.85) 0%, rgba(9, 11, 65, 0.6) 100%), url(../img/noc.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed; }
+  #banner-noc #slider {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 65%; }
+  #banner-noc h3 {
+    font-size: 0.7rem;
+    font-weight: 300;
+    line-height: 1.2;
+    letter-spacing: 0.05rem;
+    color: white;
+    text-align: center;
+    opacity: 0;
+    -webkit-animation: moveInLeft forwards;
+    -webkit-animation-delay: 1s;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-timing-function: ease-out;
+    position: relative;
+    top: 0;
+    left: 0; }
+  #banner-noc .type-wrap {
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.05rem;
+    color: white;
+    text-transform: uppercase;
+    margin-bottom: 1rem; }
+  #banner-noc #arrow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 5vh;
+    left: 50%;
+    -webkit-animation-name: moveUpDown;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out; }
+    #banner-noc #arrow p {
+      font-size: 0.45rem;
+      font-weight: 400;
+      line-height: 1.2;
+      letter-spacing: 0.05rem;
+      color: white;
+      text-transform: uppercase;
+      margin-bottom: .3rem;
+      display: block; }
+    #banner-noc #arrow svg {
+      display: block;
+      height: 1rem;
+      -webkit-transform: rotate(90deg); }
+
+#noc-about {
+  color: black;
+  background: #fcfcfc;
+  padding: 3rem;
+  width: 100%;
+  position: relative; }
+  #noc-about .about-section {
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between; }
+    #noc-about .about-section .about-text {
+      width: 45%;
+      font-size: 0.5rem;
+      font-weight: 500;
+      line-height: 1.6;
+      letter-spacing: 0.05rem; }
+      #noc-about .about-section .about-text h3 {
+        font-size: 0.8rem;
+        font-weight: 700;
+        line-height: 1.2;
+        letter-spacing: 0.05rem;
+        margin-bottom: 1rem;
+        color: #090B41; }
+  #noc-about .about-section-two h3 {
+    font-size: 0.8rem;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.05rem;
+    margin-bottom: 1rem;
+    color: #090B41; }
+  #noc-about .about-section-two .about-text {
+    font-size: 0.5rem;
+    font-weight: 500;
+    line-height: 1.6;
+    letter-spacing: 0.05rem;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between; }
+    #noc-about .about-section-two .about-text p {
+      width: 46.5%; }
+
+#noc-grid {
+  background-color: #fcfcfc;
+  width: 100%;
+  color: black;
+  padding: 0 3rem 3rem 3rem; }
+  #noc-grid h3 {
+    font-size: 0.8rem;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.05rem;
+    margin-bottom: 1rem;
+    color: #090B41;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem; }
+  #noc-grid #grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3rem;
+    row-gap: 2rem; }
+    #noc-grid #grid .checked {
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: space-between; }
-      header nav #logo-mobile {
-        display: flex; }
-      header nav #nav-toggle {
-        z-index: 4788888888888;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end; }
-      header nav #nav-list {
-        padding: 1rem;
-        display: block;
-        position: absolute;
-        top: calc(100% + .5rem);
-        right: -.8rem;
-        width: 60vw;
-        background-color: #090B41;
-        border-left: 0.5px solid rgba(117, 117, 117, 0.2);
-        height: 100vh;
-        -webkit-transform: translateX(100vw);
-        -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03);
-        overflow-y: scroll; }
-        header nav #nav-list .nav-li {
-          display: block;
-          margin: 0;
-          margin-bottom: 1rem; }
-          header nav #nav-list .nav-li#redblue-li {
-            background: transparent;
-            padding: 0;
-            border-radius: 0; }
-            header nav #nav-list .nav-li#redblue-li a {
-              color: #fcfcfc; }
-          header nav #nav-list .nav-li:nth-of-type(8) a {
-            color: #fcfcfc;
-            font-weight: 500;
-            border: none;
-            padding: 0; }
-          header nav #nav-list .nav-li:nth-of-type(8) a:hover {
-            -webkit-animation: none; }
-          header nav #nav-list .nav-li .underline {
-            display: none; }
-          header nav #nav-list .nav-li#logo-li {
-            display: none; }
-          header nav #nav-list .nav-li a {
-            color: #fcfcfc;
-            font-size: .5rem; }
-            header nav #nav-list .nav-li a p {
-              display: inline-block; }
-            header nav #nav-list .nav-li a .show-options {
-              display: inline-block;
-              position: absolute;
-              right: 0; }
-          header nav #nav-list .nav-li:last-of-type {
-            margin-bottom: 2rem; }
-          header nav #nav-list .nav-li svg polyline {
-            stroke: #fff;
-            fill: none;
-            stroke-width: 3; }
-        header nav #nav-list #under-servicios, header nav #nav-list #under-standards, header nav #nav-list #under-industrias {
-          display: none;
-          opacity: 1;
-          pointer-events: visible;
-          background-color: transparent;
-          position: relative;
-          top: 0;
-          left: 0;
-          width: auto;
-          padding: 0;
-          box-shadow: none; }
-          header nav #nav-list #under-servicios#under-standards, header nav #nav-list #under-standards#under-standards, header nav #nav-list #under-industrias#under-standards {
-            left: 0;
-            width: auto; }
-          header nav #nav-list #under-servicios li, header nav #nav-list #under-standards li, header nav #nav-list #under-industrias li {
-            -webkit-transform: translateX(0);
-            opacity: 1;
-            margin-left: 0;
-            margin-bottom: .5rem; }
-            header nav #nav-list #under-servicios li:last-of-type, header nav #nav-list #under-standards li:last-of-type, header nav #nav-list #under-industrias li:last-of-type {
-              margin-bottom: .1rem; }
-            header nav #nav-list #under-servicios li a, header nav #nav-list #under-standards li a, header nav #nav-list #under-industrias li a {
-              text-transform: none;
-              font-weight: 300; }
-        header nav #nav-list #idioma-li {
-          display: none; }
-        header nav #nav-list #logo {
-          display: none; }
+      justify-content: center;
+      margin-bottom: .7rem; }
+      #noc-grid #grid .checked svg {
+        height: 1.4rem; }
+        #noc-grid #grid .checked svg path, #noc-grid #grid .checked svg polyline {
+          stroke-width: 8;
+          stroke: #36BA5A;
+          fill: none; }
+    #noc-grid #grid p {
+      text-align: center;
+      font-size: 0.45rem;
+      font-weight: 400;
+      line-height: 1.6;
+      letter-spacing: 0.05rem;
+      width: 100%; }
+    #noc-grid #grid p:first-of-type {
+      font-weight: 600;
+      margin-bottom: .4rem;
+      text-transform: uppercase; }
+
+@media screen and (max-width: 1024px) {
+  html {
+    font-size: 7vw; }
   #banner {
     height: 90vh;
     overflow-x: hidden; }
@@ -1553,13 +1715,31 @@ footer {
       #soc-about .about-text:first-of-type {
         margin-bottom: 2rem; }
   #soc-grid {
-    background-color: white;
     width: 100%;
-    color: black;
     padding: 0 2rem 0 2rem; }
     #soc-grid #grid {
       display: block; }
       #soc-grid #grid .grid-item {
+        margin-bottom: 1.5rem; }
+  #banner-noc #slider {
+    width: 90%; }
+  #noc-about {
+    padding: 3rem 2rem; }
+    #noc-about .about-section, #noc-about .about-section-two {
+      display: block; }
+      #noc-about .about-section .about-text, #noc-about .about-section-two .about-text {
+        display: block;
+        width: 100%; }
+        #noc-about .about-section .about-text p, #noc-about .about-section-two .about-text p {
+          width: 100%; }
+      #noc-about .about-section.about-section .about-text:first-of-type, #noc-about .about-section-two.about-section .about-text:first-of-type {
+        margin-bottom: 2rem; }
+  #noc-grid {
+    width: 100%;
+    padding: 0 2rem 0 2rem; }
+    #noc-grid #grid {
+      display: block; }
+      #noc-grid #grid .grid-item {
         margin-bottom: 1.5rem; } }
 
 @media screen and (orientation: landscape) and (max-width: 1024px) {
