--- a/css/styles.css
+++ b/css/styles.css
@@ -594,7 +594,7 @@ footer {
 
 .anchor {
   position: absolute;
-  top: -4.5rem;
+  top: -3rem;
   left: 0;
   width: 100%; }
 
@@ -963,6 +963,18 @@ footer {
   justify-content: space-between; }
   #banner-servicios img {
     width: 40%; }
+  #banner-servicios.background {
+    background: linear-gradient(104deg, rgba(9, 11, 65, 0.85) 0%, rgba(9, 11, 65, 0.6) 100%), url(../img/remote-work.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed; }
+  #banner-servicios.background-2 {
+    background: linear-gradient(104deg, rgba(9, 11, 65, 0.9) 0%, rgba(9, 11, 65, 0.8) 100%), url(../img/vendor-risk.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed; }
   #banner-servicios #arrow {
     position: absolute;
     bottom: 5vh;
